--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,21 +14,20 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+      
+      - name: Remove chrome
+        run: sudo apt purge google-chrome-stable
 
+      - name: Remove default Chromium
+        run: sudo apt purge chromium-browser
+
+      - name: Install a new Chromium
+        run: sudo apt install -y chromium-browser
+      
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
-      - uses: actions/checkout@v2
-      - uses: nanasess/setup-chromedriver@v1
-        with:
-          # Optional: do not specify to match Chrome's version
-          chromedriver-version: '88.0.4324.96'
-      - run: |
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       - name: execute py script
         run: python main.py
