--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,12 @@
 name: run main.py
 
-on: [workflow_dispatch]
+on:
+  schedule:
+    - cron: '0 4 * * *'
+    - cron: '0 11 * * *'
+    - cron: '30 15 * * *'
+    - cron: '10 19 * * *'
+    - timezone: 'Asia/Kolkata'
 
 jobs:
   build:
