--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,10 +2,8 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '0 4 * * *'
-    - cron: '0 11 * * *'
-    - cron: '30 15 * * *'
-    - cron: '10 19 * * *'
+    - cron:  '*/15 * * * *'
+    - cron:  '*/30 * * * *'
     - timezone: 'Asia/Kolkata'
 
 jobs:
