--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,8 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron:  '*/15 * * * *'
-    - cron:  '*/30 * * * *'
+    - cron: '0 4 * * *'
     - timezone: 'Asia/Kolkata'
 
 jobs:
