--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,9 @@ name: run main.py
 on:
   schedule:
     - cron: '0 4 * * *'
-    - timezone: 'Asia/Kolkata'
+    - cron: '0 11 * * *'
+    - cron: '30 15 * * *'
+    - cron: '10 19 * * *'
 
 jobs:
   build:
@@ -17,6 +19,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+        
+      - name: SET TIME
+        uses: szenius/set-timezone@v1.0
+        with:
+          timezoneLinux: "Asia/Kolkata"
       
       - name: Remove chrome
         run: sudo apt purge google-chrome-stable
