--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Remove default Chromium
         run: sudo apt purge chromium-browser
 
+      - name: Install a new Chrome
+        run: sudo apt install -y google-chrome-stable
+
       - name: Install a new Chromium
         run: sudo apt install -y chromium-browser
       
