--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,11 +1,11 @@
 name: run main.py
 
-on:
-  schedule:
-    - cron: '30 22 * * *'
-    - cron: '30 5 * * *'
-    - cron: '0 10 * * *'
-    - cron: '40 14 * * *'
+on: [workflow_dispatch]
+#   schedule:
+#     - cron: '30 22 * * *'
+#     - cron: '30 5 * * *'
+#     - cron: '0 10 * * *'
+#     - cron: '40 14 * * *'
 
 jobs:
   build:
