--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,7 +32,7 @@ jobs:
         run: sudo apt purge chromium-browser
 
       - name: Install a new Chromium
-        run: apt-cache madison chromium-browser
+        run: sudo apt update && sudo apt install snapd && sudo snap install -y chromium
 #         run: sudo apt install -y chromium-browser=109.0.5414.95
       
       - name: install python packages
